--- a/assets/cluster_deploy.yml
+++ b/assets/cluster_deploy.yml
@@ -11,17 +11,35 @@
     cluster_name: odp-cluster
 
   tasks:
+  - name: Wait for Ambari Server to be ready
+    uri:
+      url: "{{ ambari_url }}/check"
+      user: "{{ ambari_user }}"
+      password: "{{ ambari_pass }}"
+      force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
+      return_content: no
+    register: ambari_check
+    until: ambari_check.status == 200
+    retries: 30
+    delay: 10
+    ignore_errors: yes
+
   - name: Wait for all 4 hosts to be registered
     uri:
       url: "{{ ambari_url }}/hosts"
       user: "{{ ambari_user }}"
       password: "{{ ambari_pass }}"
       force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
       return_content: yes
     register: hosts_response
-    until: hosts_response.json.items | length == 4
+    until: hosts_response.status == 200 and (hosts_response.content | from_json).items | length == 4
     retries: 60
     delay: 10
+    ignore_errors: yes
 
   - name: Register VDF
     uri:
@@ -30,6 +48,8 @@
       user: "{{ ambari_user }}"
       password: "{{ ambari_pass }}"
       force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
       body:
         VersionDefinition:
           version_url: "file://{{ vdf_file }}"
@@ -45,6 +65,8 @@
       user: "{{ ambari_user }}"
       password: "{{ ambari_pass }}"
       force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
       body: "{{ lookup('file', blueprint_file) }}"
       body_format: json
       status_code: [ 201, 409 ]
@@ -56,6 +78,8 @@
       user: "{{ ambari_user }}"
       password: "{{ ambari_pass }}"
       force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
       body: "{{ lookup('file', cluster_template_file) }}"
       body_format: json
       status_code: 202
@@ -68,9 +92,11 @@
       user: "{{ ambari_user }}"
       password: "{{ ambari_pass }}"
       force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
       return_content: yes
     register: request_status
-    until: request_status.json.Requests.request_status == 'COMPLETED' or request_status.json.Requests.request_status == 'FAILED'
+    until: (request_status.content | from_json).Requests.request_status == 'COMPLETED' or (request_status.content | from_json).Requests.request_status == 'FAILED'
     retries: 360
     delay: 10
     when: cluster_request.status == 202
@@ -78,4 +104,4 @@
   - name: Fail if cluster creation failed
     fail:
       msg: "Cluster creation failed. Check Ambari logs."
-    when: cluster_request.status == 202 and request_status.json.Requests.request_status == 'FAILED'
+    when: cluster_request.status == 202 and (request_status.content | from_json).Requests.request_status == 'FAILED'
