--- a/assets/site.yml
+++ b/assets/site.yml
@@ -53,6 +53,12 @@
         state: present
         update_cache: yes
 
+    - name: Set Java 8 as default
+      ansible.builtin.shell: |
+        alternatives --set java /usr/lib/jvm/java-1.8.0-openjdk/bin/java || true
+        alternatives --set javac /usr/lib/jvm/java-1.8.0-openjdk/bin/javac || true
+      changed_when: false
+
     - name: Ensure chronyd enabled and running
       ansible.builtin.service:
         name: chronyd
@@ -114,6 +120,7 @@
           - ambari-server.aarch64
           - postgresql-server
           - postgresql-contrib
+          - postgresql-jdbc
         state: present
 
     - name: Initialize PostgreSQL if needed
@@ -124,22 +131,116 @@
       args:
         executable: /bin/bash
 
-    - name: Ambari server setup (non-interactive)
+    - name: Configure PostgreSQL (listen_addresses)
+      ansible.builtin.lineinfile:
+        path: /var/lib/pgsql/data/postgresql.conf
+        regexp: "^#?listen_addresses"
+        line: "listen_addresses = '*'"
+        state: present
+    
+    - name: Configure PostgreSQL (pg_hba.conf)
+      ansible.builtin.copy:
+        dest: /var/lib/pgsql/data/pg_hba.conf
+        content: |
+          # TYPE  DATABASE        USER            ADDRESS                 METHOD
+          local   all             postgres                                peer
+          local   all             all                                     md5
+          host    all             all             127.0.0.1/32            md5
+          host    all             all             ::1/128                 md5
+          host    all             all             10.0.0.0/16             md5
+          host    all             all             10.0.1.0/24             md5
+          host    ambari          ambari          0.0.0.0/0               md5
+          host    hive            hive            0.0.0.0/0               md5
+          host    ranger          rangeradmin     0.0.0.0/0               md5
+        owner: postgres
+        group: postgres
+        mode: '0600'
+
+    - name: Restart PostgreSQL to apply changes
+      ansible.builtin.service:
+        name: postgresql
+        state: restarted
+        enabled: yes
+
+    - name: Create PostgreSQL Users
+      ansible.builtin.shell: |
+        sudo -u postgres psql -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname='ambari') THEN CREATE ROLE ambari LOGIN PASSWORD 'Ambari123'; END IF; END \$\$;"
+        sudo -u postgres psql -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname='hive') THEN CREATE ROLE hive LOGIN PASSWORD 'HiveUserMeta2025'; END IF; END \$\$;"
+        sudo -u postgres psql -c "DO \$\$ BEGIN IF NOT EXISTS (SELECT FROM pg_roles WHERE rolname='rangeradmin') THEN CREATE ROLE rangeradmin LOGIN PASSWORD 'RangerAdmin1234!'; END IF; END \$\$;"
+      args:
+        executable: /bin/bash
+
+    - name: Create PostgreSQL Databases
+      ansible.builtin.shell: |
+        sudo -u postgres psql -tc "SELECT 1 FROM pg_database WHERE datname = 'ambari'" | grep -q 1 || sudo -u postgres psql -c "CREATE DATABASE ambari OWNER ambari;"
+        sudo -u postgres psql -tc "SELECT 1 FROM pg_database WHERE datname = 'hive'" | grep -q 1 || sudo -u postgres psql -c "CREATE DATABASE hive OWNER hive;"
+        sudo -u postgres psql -tc "SELECT 1 FROM pg_database WHERE datname = 'ranger'" | grep -q 1 || sudo -u postgres psql -c "CREATE DATABASE ranger OWNER rangeradmin;"
+        sudo -u postgres psql -d ambari -c "CREATE SCHEMA IF NOT EXISTS ambari AUTHORIZATION ambari;"
+      args:
+        executable: /bin/bash
+
+    - name: Populate Ambari Database Schema
+      ansible.builtin.shell: |
+        export PGPASSWORD='Ambari123'
+        psql -h localhost -p 5432 -U ambari -d ambari -f /var/lib/ambari-server/resources/Ambari-DDL-Postgres-CREATE.sql
+      args:
+        executable: /bin/bash
+      register: db_schema_import
+      failed_when: db_schema_import.rc != 0 and "already exists" not in db_schema_import.stderr
+
+    - name: Ambari server setup (PostgreSQL)
       ansible.builtin.command:
-        argv: ["ambari-server", "setup", "-s", "-j", "/usr/lib/jvm/java-1.8.0-openjdk"]
+        argv:
+          - "ambari-server"
+          - "setup"
+          - "-s"
+          - "--database=postgres"
+          - "--databasehost=localhost"
+          - "--databaseport=5432"
+          - "--databasename=ambari"
+          - "--databaseusername=ambari"
+          - "--databasepassword=Ambari123"
+          - "--jdbc-db=postgres"
+          - "--jdbc-driver=/usr/share/java/postgresql-jdbc.jar"
+          - "-j"
+          - "/usr/lib/jvm/java-1.8.0-openjdk"
       register: ambari_setup
       changed_when: ambari_setup.rc == 0
       failed_when: ambari_setup.rc not in [0]
 
+    - name: Ensure Ambari JDBC properties are set (workaround)
+      ansible.builtin.lineinfile:
+        path: /etc/ambari-server/conf/ambari.properties
+        regexp: "{{ item.regexp }}"
+        line: "{{ item.line }}"
+      loop:
+        - { regexp: '^server.jdbc.url=', line: 'server.jdbc.url=jdbc:postgresql://localhost:5432/ambari' }
+        - { regexp: '^server.jdbc.driver=', line: 'server.jdbc.driver=org.postgresql.Driver' }
+        - { regexp: '^server.jdbc.database=', line: 'server.jdbc.database=postgres' }
+        - { regexp: '^server.jdbc.database_name=', line: 'server.jdbc.database_name=ambari' }
+        - { regexp: '^server.jdbc.postgres.schema=', line: 'server.jdbc.postgres.schema=ambari' }
+        - { regexp: '^server.jdbc.user.name=', line: 'server.jdbc.user.name=ambari' }
+        - { regexp: '^server.jdbc.user.passwd=', line: 'server.jdbc.user.passwd=/etc/ambari-server/conf/password.dat' }
+        - { regexp: '^server.jdbc.rca.url=', line: 'server.jdbc.rca.url=jdbc:postgresql://localhost:5432/ambari' }
+        - { regexp: '^server.jdbc.rca.driver=', line: 'server.jdbc.rca.driver=org.postgresql.Driver' }
+        - { regexp: '^server.jdbc.rca.user.name=', line: 'server.jdbc.rca.user.name=ambari' }
+        - { regexp: '^server.jdbc.rca.user.passwd=', line: 'server.jdbc.rca.user.passwd=/etc/ambari-server/conf/password.dat' }
+        - { regexp: '^ambari-server.user=', line: 'ambari-server.user=root' }
+        - { regexp: '^java.home=', line: 'java.home=/usr/lib/jvm/java-1.8.0-openjdk' }
+        - { regexp: '^server.os_family=', line: 'server.os_family=redhat' }
+        - { regexp: '^server.os_type=', line: 'server.os_type=redhat9' }
+      
+    - name: Ensure Ambari password file exists
+      ansible.builtin.copy:
+        content: "Ambari123"
+        dest: /etc/ambari-server/conf/password.dat
+        owner: root
+        group: root
+        mode: '0600'
+
     - name: Start ambari-server
       ansible.builtin.service:
         name: ambari-server
-        state: started
-        enabled: yes
-
-    - name: Start ambari-agent (master)
-      ansible.builtin.service:
-        name: ambari-agent
         state: started
         enabled: yes
 
@@ -203,8 +304,8 @@
         name: ambari-server
         state: restarted
 
-- name: Configure workers
-  hosts: workers
+- name: Configure Ambari Agents (All Nodes)
+  hosts: all
   become: yes
   gather_facts: false
   tasks:
@@ -215,10 +316,23 @@
           - ambari-agent.aarch64
         state: present
 
+    - name: Force kill ambari-agent (avoid process lock)
+      ansible.builtin.shell: |
+        pkill -9 -f ambari_agent || true
+        rm -f /var/run/ambari-agent/ambari-agent.pid
+        rm -f /run/ambari-agent/ambari-agent.pid
+      ignore_errors: yes
+
+    - name: Cleanup Ambari Agent certificates (fixes SSL mismatch)
+      ansible.builtin.shell: |
+        rm -rf /var/lib/ambari-agent/keys/*
+        # DO NOT delete data/* as it contains the 'version' file needed by agent
+      ignore_errors: yes
+
     - name: Point ambari-agent to master
       ansible.builtin.lineinfile:
         path: /etc/ambari-agent/conf/ambari-agent.ini
-        regexp: '^hostname='
+        regexp: 'hostname='
         line: 'hostname=master.cdp'
         create: yes
 
@@ -229,5 +343,5 @@
     - name: Ensure ambari-agent is running and enabled
       ansible.builtin.service:
         name: ambari-agent
-        state: started
+        state: restarted
         enabled: yes
