--- a/assets/cluster_deploy.yml
+++ b/assets/cluster_deploy.yml
@@ -41,6 +41,32 @@
     delay: 10
     ignore_errors: yes
 
+  - name: Delete existing Cluster
+    uri:
+      url: "{{ ambari_url }}/clusters/{{ cluster_name }}"
+      method: DELETE
+      user: "{{ ambari_user }}"
+      password: "{{ ambari_pass }}"
+      force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
+      status_code: [ 200, 202, 404 ]
+
+  - name: Wait for Cluster to be deleted
+    uri:
+      url: "{{ ambari_url }}/clusters/{{ cluster_name }}"
+      method: GET
+      user: "{{ ambari_user }}"
+      password: "{{ ambari_pass }}"
+      force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
+      status_code: [ 404 ]
+    register: cluster_gone
+    until: cluster_gone.status == 404
+    retries: 60
+    delay: 5
+
   - name: Register VDF
     uri:
       url: "{{ ambari_url }}/version_definitions"
@@ -55,8 +81,19 @@
           version_url: "file://{{ vdf_file }}"
       body_format: json
       status_code: [ 201, 409, 500 ]
-    register: vdf_result
-    failed_when: vdf_result.status == 500 and "already defined" not in vdf_result.json.message
+    register: vdf_registration
+    failed_when: vdf_registration.status != 201 and "Duplicate" not in vdf_registration.json.message|default("") and vdf_registration.status != 500
+
+  - name: Delete existing Blueprint
+    uri:
+      url: "{{ ambari_url }}/blueprints/odp-blueprint"
+      method: DELETE
+      user: "{{ ambari_user }}"
+      password: "{{ ambari_pass }}"
+      force_basic_auth: yes
+      headers:
+        X-Requested-By: "ambari"
+      status_code: [200, 404]
 
   - name: Register Blueprint
     uri:
@@ -71,18 +108,6 @@
       body_format: json
       status_code: [ 201, 409 ]
 
-  - name: Check if Cluster already exists
-    uri:
-      url: "{{ ambari_url }}/clusters/{{ cluster_name }}"
-      method: GET
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      status_code: [ 200, 404 ]
-      return_content: no
-    register: cluster_check
 
   - name: Create Cluster
     uri:
@@ -97,7 +122,7 @@
       body_format: json
       status_code: 202
     register: cluster_request
-    when: cluster_check.status == 404
+
 
   - name: Monitor Cluster Creation
     uri:
