--- a/assets/site.yml
+++ b/assets/site.yml
@@ -268,6 +268,7 @@
           export PATH=$PATH:$SPARK_HOME/bin
           export HIVE_HOME="/usr/odp/1.2.2.0-128/hive"
           export PATH=$PATH:$HIVE_HOME/bin
+          export PATH=$PATH:/usr/local/bin
 
     - name: Create hdfscorrections.sh
       ansible.builtin.copy:
